--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -13,6 +13,15 @@
 .Navbar-links li {
   padding: 5px 8px;
   font-size: 12px;
+  cursor: pointer;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -ms-transition: all 0.4s;
+  -o-transition: all 0.4s;
+}
+.Navbar-links li:hover {
+  color: #c00;
 }
 .link-border {
   border: 1px solid #fff;
@@ -22,9 +31,71 @@
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
+
 .logo img {
   width: 150px;
 }
 .menu {
   margin-top: 20px;
+}
+.menu-icon {
+  color: #fff;
+  cursor: pointer;
+  display: none;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -ms-transition: all 0.4s;
+  -o-transition: all 0.4s;
+}
+.menu-icon:hover {
+  color: #c00;
+}
+
+@media screen and (max-width: 700px) {
+  .menu-icon {
+    display: inline-block;
+  }
+  .Navbar-links li {
+    border-bottom: 1px solid #fff;
+    width: 90%;
+    padding: 10px 0;
+  }
+  .Navbar-links.hide {
+    align-items: center;
+    position: absolute;
+    left: 5px;
+    top: 50px;
+    flex-direction: column;
+    background: #0a1a33;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    transition: all 0.4s;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    text-align: center;
+  }
+  .Navbar-links.show {
+    align-items: center;
+    position: absolute;
+    left: 5px;
+    top: 50px;
+    flex-direction: column;
+    background: #0a1a33;
+    width: 100%;
+    overflow: hidden;
+    height: 220px;
+    transition: all 0.4s;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    text-align: center;
+  }
+  .Navbar-links.show li:hover {
+    background: #12305e;
+  }
 }
