features is completed

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -30,6 +30,7 @@
   padding: 3px;
   border: 2px solid #fff;
   margin-left: 15px;
+  cursor: pointer;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -41,9 +42,35 @@
   color: #fff;
   padding: 3px;
   border: 2px solid orangered;
+  cursor: pointer;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+}
+@media screen and (max-width: 580px) {
+  .content {
+    flex-direction: column;
+    height: 600px;
+  }
+  .text {
+    margin: 20px 0 30px 0;
+    text-align: center;
+  }
+  .text h1 {
+    font-size: 25px;
+  }
+  .text h2 {
+    font-size: 20px;
+  }
+  #btn1 {
+    font-size: 10px;
+  }
+  #btn2 {
+    font-size: 10px;
+  }
+  .pic img {
+    width: 200px;
+  }
 }
