--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,11 @@ body {
   height: 100%;
   min-height: 100vh;
 }
+@media screen and (max-width: 600px) {
+  .header-bg {
+    background-color: #0a1930;
+    width: 100%;
+    height: 100%;
+    min-height: 80vh;
+  }
+}
