--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -62,6 +62,7 @@
     padding: 10px 0;
   }
   .Navbar-links.hide {
+    z-index: 1000;
     align-items: center;
     position: absolute;
     left: 5px;
@@ -79,6 +80,7 @@
     text-align: center;
   }
   .Navbar-links.show {
+    z-index: 1000;
     align-items: center;
     position: absolute;
     left: 5px;
